# slurm-hpc-workflows

./: .cpush.json5  LICENSE  README.md  pyproject.toml
docs/: rivanna-setup.md
examples/: ray-compute-pi.ipynb
extra/: Rivanna-FoxyProxy_2024-06-06.json
src/ray_hpc_workflows/: grafana_service.py  optuna_dash.py  postgres_db.py  prometheus_service.py  ray_cluster.py  ray_cluster_rivanna.py  ray_utils.py  run_jupyter.py  slurm_job_manager.py  slurm_pilot.py  slurm_pilot_pb2_grpc.py  temp_postgres.py  utils.py
src/ray_hpc_workflows/config/grafana_dashboards/: data_grafana_dashboard.json  default_grafana_dashboard.json  serve_deployment_grafana_dashboard.json  serve_grafana_dashboard.json
src/ray_hpc_workflows/templates/: ray_cluster.jinja  run_jupyter.jinja  slurm_job_manager.jinja  slurm_pilot.jinja
src/slurm_workflows/: postgres_db.py  remote_queue.py  run_jupyter.py  slurm_job_manager.py  slurm_pilot.proto  slurm_pilot.py  slurm_pilot_executor.py  slurm_pilot_pb2.py  slurm_pilot_pb2.pyi  slurm_pilot_pb2_grpc.py  slurm_pilot_worker.py  slurm_utils.py  utils.py
src/slurm_workflows/templates/: __init__.py  slurm_pilot.jinja
