[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-workflows"
version = "0.1.0"
authors = [
  { name="Parantapa Bhattacharya", email="parantapa@virginia.edu" },
]
description = "HPC workflow helpers for Slurm clusters."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click",
    "tqdm",
    "jinja2",
    "psutil",
    "netifaces",
    "platformdirs",
    "more-itertools",
    "psycopg2-binary",
    "grpcio",
    "grpcio-tools",
    "cloudpickle",
    "typeguard",
    "polars",
    "runstats",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "http://github.com/nssac/slurm-workflows"

[project.scripts]
"run-jupyter" = "slurm_workflows.run_jupyter:run_jupyter"
"slurm-pilot-worker" = "slurm_workflows.slurm_pilot_worker:slurm_pilot_worker"
